<resources>
    <string name="CALL_TO_SWITCH_ON_GPS">X001245</string>
    <string name="CODE_TO_NAME">CODE_TO_NAME</string>
    <string name="DIALOG_BAR">dialog_box_pop_up</string>
    <string name="FINE_ACCURATE_LOCATION">0x1234</string>
    <string name="FINE_LOCATION_STATION_FILTERING">0x1235</string>
    <string name="GOOGLE_LOC_API">0y1235</string>
    <string name="GOOGLE_LOC_API_NEAREST_STN_SEARCH">0y1239</string>
    <string name="GOOGLE_LOC_API_NEAREST_STN_SEARCH_LOGIN">GOOGLE_LOC_API_NEAREST_STN_SEARCH_LOGIN</string>
    <string name="GOOGLE_LOC_API_QR_LOCATION">0y1238</string>
    <string name="GOOGLE_LOC_API_STN_FILTER_JNY">0y1237</string>
    <string name="GOOGLE_LOC_API_STN_FILTER_PFT">0y1236</string>
    <string name="GPS_SIGNAL_LOW_MESSAGE">GPS Signal is low here. It may be possible if GPS provider is not having high accuracy. Kindly restart your device if problem persists.</string>
    <string name="HAS_FAKE_LOCATION">0x1236</string>
    <string name="LN_TRAIN_TYPE">LN_TRAIN_TYPE</string>
    <string name="ONLY_GPS">0y1234</string>
    <string name="SNACK_BAR">snack_bar_pop_up</string>
    <string name="STATION_CITY">STATION_CITY</string>
    <string name="STATION_HINDI">STATION_HINDI</string>
    <string name="STATION_KANNADA">STATION_KANNADA</string>
    <string name="STATION_MALAYALAM">STATION_MALAYALAM</string>
    <string name="STATION_MARATHI">STATION_MARATHI</string>
    <string name="STATION_NAME_CODE">STATION_NAME_CODE</string>
    <string name="STATION_TAMIL">STATION_TAMIL</string>
    <string name="STATION_TELUGU">STATION_TELUGU</string>
    <string name="TIME_OUT">TIME_OUT</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept">ACCEPT</string>
    <string name="act_not_yet_act_1">Your ticket is not yet activated please activate your ticket at </string>
    <string name="act_tkt_alrdy_printed">Ticket is already printed.</string>
    <string name="act_tkt_prog_text">Activating Ticket..</string>
    <string name="act_tkt_txt">Activate Ticket</string>
    <string name="activated_label_text">ACTIVATED</string>
    <string name="activation_jrny_prompt_part2"> Railway Station before boarding the train and on or before </string>
    <string name="activation_prompt_part1">Kindly Take Print out of the ticket from ATVM/CoTVM</string>
    <string name="activation_prompt_part2"> kiosks or General Booking counters at </string>
    <string name="activation_prompt_part3">Railway Station on or before </string>
    <string name="activation_st_prompt_part2"> kiosks or General Booking counters at Railway Station before starting your journey.</string>
    <string name="add">add</string>
    <string name="add_destination">Add Destination</string>
    <string name="add_route_title_text">Add Route</string>
    <string name="add_route_to_ftr_alert">Do you want to add this route in frequent travel routes?</string>
    <string name="add_source">Add Source</string>
    <string name="add_your_id_card_no">Add your ID Card No.</string>
    <string name="address">Address:</string>
    <string name="address_line1">Address Line1</string>
    <string name="address_line2_optional">Address Line2(optional)</string>
    <string name="adult">Adult:</string>
    <string name="adult_1">Adult</string>
    <string name="adult_season">ADULT SEASON</string>
    <string name="adult_text">ADULT: </string>
    <string name="age">Age</string>
    <string name="age_col">Age: </string>
    <string name="alert_message_logout">Tap back once more to exit.</string>
    <string name="alert_title">Alert!</string>
    <string name="already_printed_label_text">AlREADY PRINTED</string>
    <string name="an_organisation_under_ministry_of_railways_n_govt_of_india">"An Organisation under Ministry of Railways,
Govt. of India"</string>
    <string name="and">and</string>
    <string name="appType">1</string>
    <string name="appVersionG">G.15.0</string>
    <string name="app_name">UTS</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="avail_concession_text">Avail concession</string>
    <string name="available_routes">Available Routes</string>
    <string name="balance">CURRENT BALANCE</string>
    <string name="between">Between</string>
    <string name="blue">\#0000CD</string>
    <string name="book_again_title_text">Book Again</string>
    <string name="book_and_print_paper_">"Book and Print
(Paper)"</string>
    <string name="book_tickets">Book Tickets</string>
    <string name="book_tkt_text">Book Ticket</string>
    <string name="book_using_qr_code">BOOK USING QR CODE</string>
    <string name="booked_same_ticket_in_10_min_alert_text">You have booked same ticket within 10 minutes. Do you want to book another ticket?</string>
    <string name="booked_tickets">Booked Tickets</string>
    <string name="bookingModeAll">ALLMODES</string>
    <string name="bookingModePaper">PAPER</string>
    <string name="bookingModePaperLess">PAPERLESS</string>
    <string name="booking_history_progress_dialog">Loading..Please wait</string>
    <string name="booking_history_text">Booking History</string>
    <string name="booking_id_text">BOOKING ID: </string>
    <string name="booking_time">Booking Time:</string>
    <string name="booking_time_col">Booking Time:</string>
    <string name="booking_time_out">180000</string>
    <string name="booking_tkt_prog_dialog">"Booking is in process. Please don't press back button…"</string>
    <string name="booking_tkt_prog_message">@string/booking_tkt_prog_dialog</string>
    <string name="booking_transactions">Recent Bookings</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="callForBookingHistory">callForBookingHistory</string>
    <string name="callForShowTicket">callForShowTicket</string>
    <string name="callFromApp">callFromAppParam</string>
    <string name="call_from_key">callFromKey</string>
    <string name="cancel_text">Cancel</string>
    <string name="cancel_ticket_progress_dialog">Loading ticket details..Please wait</string>
    <string name="cancel_tkt_alert_part_1">Do you want to cancel this ticket?</string>
    <string name="cancel_tkt_alert_part_2">UTS No.: </string>
    <string name="cancel_tkt_alert_part_3">, SRC: </string>
    <string name="cancel_tkt_alert_part_4">, DSTN: </string>
    <string name="centre_for_railway_information_systems">Centre for Railway Information Systems</string>
    <string name="change_city_label">Change City</string>
    <string name="child_1">Child</string>
    <string name="city_text">City</string>
    <string name="contact_us">Contact us</string>
    <string name="dear_user">Dear User</string>
    <string name="decline">DECLINE</string>
    <string name="done_text">Done</string>
    <string name="edit_journey">Edit Journey</string>
    <string name="enter_credential">Enter your credentials</string>
    <string name="enter_your_current_city">Enter your current city</string>
    <string name="faq">FAQ</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="getting_started">Getting Started</string>
    <string name="hint_pwd">Password</string>
    <string name="home_label">Home</string>
    <string name="indian_railways">Indian Railways</string>
    <string name="later">LATER</string>
    <string name="log_in">LOGIN ( If already registered )</string>
    <string name="login_text">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="never">NEVER</string>
    <string name="note_1_description">The age limit for availing Senior Citizen Journey Ticket (Male=&lt;value from db>, Female=&lt;value from db>).</string>
    <string name="note_1_text">Note 1</string>
    <string name="note_2_description">Senior Citizen availing concession should produce on demand some proof of age during journey to avoid Penal Charging.</string>
    <string name="note_2_text">Note 2</string>
    <string name="notification">Notification</string>
    <string name="or_label">(or)</string>
    <string name="rate_it_in_the_play_store">If you like our app, please take a moment to rate it in the Play Store.</string>
    <string name="rate_us">RATE US</string>
    <string name="registration_label">Registration</string>
    <string name="remember_password">Remember Password</string>
    <string name="senior_citizen_undertaking">I am senior citizen and availing Senior Citizen concession ticket as per the rules of Indian Railway given above. I will carry age proof document while travelling in the train.</string>
    <string name="show_ticket">SHOW BOOKED TICKET</string>
    <string name="sign_up">REGISTER</string>
    <string name="thanks_for_your_support">Rating takes less than a minute. Thanks for your support!</string>
    <string name="ticket_type">Ticket Type</string>
    <string name="undertaking_from_senior_citizen">Undertaking from Senior Citizen</string>
    <string name="unreserved_ticketing_system_on_mobile">Unreserved Ticketing System on Mobile</string>
    <string name="user_id_label">Hello Guest</string>
    <string name="version_name">App Version</string>
    <string name="welcomes_you_to">welcomes you to</string>
</resources>