<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/border" android:paddingLeft="8.0dip" android:paddingTop="12.0dip" android:paddingRight="8.0dip" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/dialog_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/undertaking_from_senior_citizen" android:drawableRight="@drawable/ok" android:drawableEnd="@drawable/ok" style="@style/textFontStyle" />
    <View android:background="@color/title_background" android:layout_width="fill_parent" android:layout_height="2.0dip" />
    <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/note_1_text" style="@style/textFontStyle" />
    <TextView android:textSize="15.0sp" android:textColor="@color/title_background" android:id="@id/note1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/note_1_description" style="@style/textFontStyle" />
    <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/note_2_text" style="@style/textFontStyle" />
    <TextView android:textSize="15.0sp" android:textColor="@color/darkred" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/note_2_description" style="@style/textFontStyle" />
    <View android:background="@color/title_background" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="4.0dip" />
    <TextView android:textSize="15.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/senior_citizen_undertaking" style="@style/textFontStyle" />
    <View android:background="@color/title_background" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="4.0dip" android:layout_marginTop="@dimen/activity_vertical_margin" android:layout_marginRight="4.0dip" />
    <LinearLayout android:orientation="horizontal" android:background="@drawable/border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="2.0">
        <Button android:textSize="15.0sp" android:textColor="@color/textcolor" android:id="@id/decline_button" android:background="@color/title_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:text="@string/decline" android:layout_weight="1.0" style="@style/textFontStyle" />
        <Button android:textSize="15.0sp" android:textColor="@color/textcolor" android:gravity="center" android:id="@id/accept_button" android:background="@color/title_background" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:text="@string/accept" android:layout_weight="1.0" style="@style/textFontStyle" />
    </LinearLayout>
    <View android:background="@color/title_background" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" />
</LinearLayout>