<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bgi" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ViewStub android:id="@id/vsHeader" android:layout="@layout/header_login" android:inflatedId="@id/header" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <TextView android:textSize="14.0sp" android:textColor="@color/textcolor" android:id="@id/version_number_text_view" android:padding="@dimen/activity_vertical_margin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/version_name" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" />
    <ViewStub android:id="@id/vsFooter" android:layout="@layout/footer" android:inflatedId="@id/Footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    <ScrollView android:id="@id/scroll" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_above="@id/vsFooter">
        <RelativeLayout android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:splitMotionEvents="true" android:animateLayoutChanges="true">
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/title_background" android:id="@id/LogMobile" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:hint="@string/mobile_number" android:layout_below="@id/ti_class" app:hintTextAppearance="@style/TextLabel">
                <com.google.android.material.textfield.TextInputEditText android:textSize="16.0sp" android:textColor="@color/title_background" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="13" android:inputType="number">
                    <requestFocus />
                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout android:textColorHint="@color/title_background" android:id="@id/LMPIN" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_pwd" android:layout_below="@id/LogMobile" app:hintTextAppearance="@style/TextLabel">
                <com.google.android.material.textfield.TextInputEditText android:textSize="16.0sp" android:textColor="@color/title_background" android:padding="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:maxLength="10" android:digits="qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789!@$%^*_" android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView android:textSize="12.0sp" android:textColor="@color/title_background" android:id="@id/forgot_password" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_horizontal_margin" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="12.0dip" android:text="@string/forgot_password_text" android:layout_below="@id/LogMobile" android:layout_alignRight="@id/LogMobile" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/textcolor" android:id="@id/Login" android:background="@drawable/round_button" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/log_in" android:layout_below="@id/rem_pwd_checkBox" />
            <TextView android:textStyle="bold|italic" android:textColor="@color/title_background" android:gravity="center" android:id="@id/or_text_view" android:padding="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/or_label" android:layout_below="@id/Login" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/textcolor" android:id="@id/Login_Registration" android:background="@drawable/round_button" android:padding="@dimen/activity_horizontal_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/sign_up" android:layout_below="@id/or_text_view" />
            <Button android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/textcolor" android:id="@id/show_ticket" android:background="@drawable/round_button" android:padding="@dimen/activity_vertical_margin" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_vertical_margin" android:text="@string/show_ticket" android:layout_below="@id/Getting_Started" />
            <TextView android:textSize="14.0sp" android:textColor="@color/title_background" android:id="@id/Getting_Started" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/getting_started" android:layout_below="@id/Login_Registration" />
            <TextView android:textSize="14.0sp" android:textColor="@color/title_background" android:id="@id/contact_us" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contact_us" android:layout_toRightOf="@id/Getting_Started" android:layout_below="@id/Login_Registration" />
            <TextView android:textSize="14.0sp" android:textColor="@color/title_background" android:id="@id/FAQ" android:padding="8.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/faq" android:layout_below="@id/Login_Registration" android:layout_alignParentRight="true" />
            <LinearLayout android:orientation="horizontal" android:id="@id/linearLayout8" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="72.0dip" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
            <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:gravity="center" android:id="@id/ti_class" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/enter_credential" android:layout_alignParentTop="true" />
            <LinearLayout android:orientation="horizontal" android:paddingLeft="20.0dip" android:paddingRight="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_below="@id/FAQ" android:layout_centerHorizontal="true" />
            <CheckBox android:textSize="12.0sp" android:textColor="@color/title_background" android:textColorHint="@color/title_background" android:id="@id/rem_pwd_checkBox" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remember_password" android:layout_below="@id/LMPIN" android:layout_alignLeft="@id/LogMobile" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>