<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/mainbackgound" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/indian_railways" android:layout_below="@id/imageView2" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/imageView3" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:src="@drawable/cris" android:layout_below="@id/textView2" android:layout_alignLeft="@id/imageView2" />
    <TextView android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/centre_for_railway_information_systems" android:layout_below="@id/imageView3" android:layout_centerHorizontal="true" />
    <TextView android:textSize="12.0dip" android:textColor="@color/title_background" android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/an_organisation_under_ministry_of_railways_n_govt_of_india" android:layout_below="@id/textView3" android:layout_alignParentLeft="true" android:layout_alignParentRight="true" />
    <ImageView android:id="@id/imageView1" android:layout_width="50.0dip" android:layout_height="80.0dip" android:layout_marginTop="15.0dip" android:src="@drawable/nationalemblem1" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" />
    <ImageView android:id="@id/imageView2" android:layout_width="50.0dip" android:layout_height="50.0dip" android:layout_marginTop="26.0dip" android:src="@drawable/ir" android:layout_below="@id/imageView1" android:layout_alignLeft="@id/imageView1" />
    <TextView android:textColor="@color/title_background" android:gravity="center" android:id="@id/editText1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcomes_you_to" android:layout_below="@id/textView1" android:layout_alignLeft="@id/textView1" />
    <TextView android:textSize="16.0dip" android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unreserved_ticketing_system_on_mobile" android:layout_below="@id/editText1" android:layout_centerHorizontal="true" />
</RelativeLayout>