<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bgi" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewStub android:id="@id/vsHeader" android:layout="@layout/header" android:inflatedId="@id/header" android:layout_width="fill_parent" android:layout_height="40.0dip" />
    <ViewStub android:id="@id/vsFooter" android:layout="@layout/footer" android:inflatedId="@id/Footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:gravity="center" android:id="@id/ti_class" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_header_margin" android:text="@string/change_city_label" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/city_text_view" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/city_text" android:layout_below="@id/ti_class" android:layout_alignLeft="@id/ac_changeCity" />
    <AutoCompleteTextView android:entries="@array/city" android:id="@id/ac_changeCity" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/activity_horizontal_margin" android:layout_marginRight="@dimen/activity_horizontal_margin" android:hint="@string/enter_your_current_city" android:layout_below="@id/city_text_view" android:inputType="textNoSuggestions" />
    <Button android:textColor="@color/textcolor" android:id="@id/Enq_Edit_City" android:background="@drawable/round_button" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginTop="10.0dip" android:layout_marginRight="10.0dip" android:text="@string/done_text" android:layout_below="@id/ac_changeCity" android:layout_alignParentRight="true" />
</RelativeLayout>