<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/bgi" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ViewStub android:id="@id/vsHeader" android:layout="@layout/header" android:inflatedId="@id/header" android:layout_width="fill_parent" android:layout_height="40.0dip" />
    <ViewStub android:id="@id/vsFooter" android:layout="@layout/footer" android:inflatedId="@id/Footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentBottom="true" />
    <TextView android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/textView9" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/ticket_type" android:layout_below="@id/ti_class" android:layout_alignLeft="@id/Enq_TicketType" android:textAllCaps="true" />
    <Spinner android:entries="@array/ticket_type" android:id="@id/Enq_TicketType" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="15.0dip" android:layout_below="@id/textView9" android:spinnerMode="dialog" style="@style/spinner_style" />
    <TextView android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/textView10" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/adult_1" android:layout_below="@id/Enq_TicketType" android:layout_alignLeft="@id/Enq_Adult" android:textAllCaps="true" />
    <Spinner android:entries="@array/no_0f_passengers" android:id="@id/Enq_Adult" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_below="@id/textView10" android:spinnerMode="dialog" style="@style/spinner_style" />
    <TextView android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/textView11" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/child_1" android:layout_below="@id/Enq_Adult" android:layout_alignLeft="@id/Reg_child" android:textAllCaps="true" />
    <Spinner android:textColor="@color/title_background" android:entries="@array/no_0f_passengers" android:id="@id/Reg_child" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="5.0dip" android:layout_below="@id/textView11" android:spinnerMode="dialog" style="@style/spinner_style" />
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/title_background" android:id="@id/ti_class" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/activity_header_margin" android:text="@string/edit_journey" android:layout_centerHorizontal="true" />
    <Button android:textColor="@color/textcolor" android:id="@id/Reg3_Done" android:background="@drawable/round_button" android:paddingLeft="5.0dip" android:paddingRight="10.0dip" android:layout_width="100.0dip" android:layout_height="40.0dip" android:layout_marginRight="10.0dip" android:text="@string/done_text" android:layout_below="@id/Reg_child" android:layout_alignRight="@id/Reg_child" android:layout_alignParentRight="true" />
</RelativeLayout>